--- a/package.json
+++ b/package.json
@@ -33,19 +33,14 @@
     "eslint-plugin-import": "^2.25.4",
     "express": "~4.16.1",
     "express-session": "^1.18.1",
-    "http-errors": "~1.6.3",
     "joi": "^17.6.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
-    "passport": "^0.7.0",
-    "passport-google-oauth2": "^0.2.0",
     "pg": "^8.13.1",
     "prettier": "^3.4.2",
-    "qrcode": "^1.5.4",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "qrcode": "^1.5.4"
   }
 }
