--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
     "pg": "^8.13.1",
-    "prettier": "^3.4.2",
-    "qrcode": "^1.5.4"
+    "prettier": "^3.4.2"
   }
 }
